added a "translate back", translations are now automatic

--- a/supportTranslate.html
+++ b/supportTranslate.html
@@ -3,47 +3,22 @@
 <html>
   <head>
     <title>Translate</title>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script> 
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="supportTranslate.css">
 
   </head>
 
-  <body>
-<!--     <table id="app">
-      <tr>
-        <th>Customer's message </th>
-        <th>Customer's Translated message</th>
-      </tr>
+<body>
 
-      <tr>
-        <td>
-          <textarea class="textInput" id="customerMsg" >Bonjour,
-
-</textarea>
-          <button id="transToEng">Translate!</button>
-        </td>
-        <td><div id="customerTrans" class="textDisplay"></div></td>
-      </tr>
-
-      <tr>
-        <th>My message </th>
-        <th>My translated message</th>
-      </tr>
-
-      <tr>
-        <td>
-          <textarea class="textInput" id="myMsg"></textarea>
-          <button id="transToLang">Translate!</button>
-        </td>
-        <td><div id="myTrans" class="textDisplay"></div></td>
-      </tr>
-  </table> -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <div class="container-fluid">
+  <div class="container-fluid" ng-app="supportTranslate" ng-controller="translateCtrl">
     <div class="row">
       <div class="col-sm-6">
+
         <div class="well">
           <h5 id="before">
           Customer's message:
@@ -54,7 +29,7 @@
           <div id="after">
           <button id="transToEng" class="btn btn-default">Translate!</button>
 
-          <div id='lang'>Language: </div>
+          <div class='lang'>Language:<textarea class="form-control" rows="1" id="langInput" ></textarea> </div>
         </div>
         </div>
       </div>
@@ -68,11 +43,13 @@
         </div>
       </div>
 
+
+
     </div>
 
     <div class="row">
 
-      <div class="col-sm-6">
+      <div class="col-sm-4">
         <div class="well">
           <div id="before">
           Hello,
@@ -91,13 +68,20 @@
         </div>
       </div>
 
-      <div class="col-sm-6"> 
+      <div class="col-sm-4"> 
         <div class="well">
-          <h5>Translated:</h5>
+          <h5>Your Message Translated:</h5>
           <div id="myTrans" class="textDisplay"></div>
         </div>
       </div>
 
+      <div class="col-sm-4">
+        <div class="well">
+          
+          <h5>Your Message Translated Back:</h5>
+          <div id="backInEng" class="textDisplay"></div>
+        </div>
+      </div>
     </div>
   </div>
 
